--- a/css/customScrollbar.css
+++ b/css/customScrollbar.css
@@ -299,7 +299,7 @@ yx-axis
 .mCSB_scrollTools .mCSB_buttonDown,
 .mCSB_scrollTools .mCSB_buttonLeft,
 .mCSB_scrollTools .mCSB_buttonRight{
-	background-image: url(http://exprostudio.com/html/event_organizer/images/mCSB_buttons.png); /* css sprites */
+	background-image: url(//exprostudio.com/html/event_organizer/images/mCSB_buttons.png); /* css sprites */
 	background-repeat: no-repeat;
 	opacity: 0.4; filter: "alpha(opacity=40)"; -ms-filter: "alpha(opacity=40)"; 
 }
