--- a/css/main.css
+++ b/css/main.css
@@ -2935,7 +2935,7 @@ blockquote{
 	width:100%;
 	float:left;
 	position:relative;
-	background:url(../images/counter-bg.png) no-repeat;
+	background:url(../images/counter-bg.jpg) no-repeat;
 	background-size:cover;
 }
 .tg-upcomingeventcountervtwo:before{
