--- a/css/main.css
+++ b/css/main.css
@@ -2406,22 +2406,28 @@ blockquote{
 	float: left;
 	list-style-type: none;
 }
-.tg-brands li:nth-child(1),
+/* .tg-brands li:nth-child(1),
 .tg-brands li:nth-child(2),
 .tg-brands li:nth-child(3),
 .tg-brands li:nth-child(4){border-bottom: 1px solid #ddd;}
+.tg-brands li:nth-child(6){border-bottom: 1px solid #ddd;}
 .tg-brands li:nth-child(1),
 .tg-brands li:nth-child(5){border-left: 1px solid transparent;}
+.tg-brands li:nth-child(9){border-left: none; }
 .tg-brands li:nth-child(2),
 .tg-brands li:nth-child(3),
 .tg-brands li:nth-child(4),
 .tg-brands li:nth-child(6),
 .tg-brands li:nth-child(7),
-.tg-brands li:nth-child(8){border-left: 1px solid #ddd;}
+.tg-brands li:nth-child(8),
+.tg-brands li:nth-child(10),
+.tg-brands li:nth-child(11),
+.tg-brands li:nth-child(12){border-left: 1px solid #ddd;} */
 .tg-brands li figure{
 	margin: 0;
 	width: 100%;
 	float: left;
+	border: 1px solid #ddd;
 }
 .tg-brands li figure a{display: block;}
 .tg-brands li figure a img{display: block;}
